# yajnir-rs

./: Cargo.toml  README.md
examples/: create_destroy.rs  javavm_default_args.rs
src/: env.rs  jref.rs  jvm.rs  lib.rs  macros.rs
