[package]
name = "yajnir"
version = "0.1.0"
edition = "2018"
authors = ["Chris Moore"]
license = "MIT"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni-sys = "0.3.0"
# jni = { path = "../jni-rs", features = ["invocation"] }
jtypes = { path = "../classparser/jtypes", version = "^0.1" }
cesu8 = "1.1.0"
thiserror = "1.0.26"
log = "0.4.14"

[dev-dependencies]
rusty-fork = "0.3.0"
jvm-link = { path = "../jvm-link", git = "https://github.com/chrismooredev/jvm-link-rs", branch = "main" }

[[example]]
name = "create_destroy"
